# test

./: .gitattributes  git-readme.txt
0-MP-SPDZ/: CHANGELOG.md  CONFIG  Makefile  README.md  run_crown.sh  run_crown0.sh  run_crown_batchrelu.sh  run_crown_batchsplit.sh  run_crown_elemwise.sh  run_crown_naive.sh  run_crown_naiveopt.sh  run_crown_navieopt.sh  run_crown_signsplit.sh  run_mal-rep-field_3pc_full.sh  run_mal-rep-field_full.sh  run_mascot_2pc_full.sh  run_mascot_full.sh  run_rep-field_3pc_full.sh  run_rep-field_full.sh  run_semi2k_2pc_full.sh  run_semi2k_full.sh  run_semi_full.sh  run_spdz2k_2pc_full.sh  run_spdz2k_full.sh
0-MP-SPDZ/Compiler/: allocator.py  circuit.py  comparison.py  compilerLib.py  cost.py  decision_tree.py  dijkstra.py  floatingpoint.py  instructions.py  instructions_base.py  library.py  ml.py  mpc_math.py  non_linear.py  papers.py  program.py  types.py  util.py
0-MP-SPDZ/ECDSA/: Fake-ECDSA.cpp
0-MP-SPDZ/FHE/: Ciphertext.cpp  Diagonalizer.cpp  FFT.cpp  FFT_Data.h  FHE_Keys.cpp  NTL-Subs.cpp  NoiseBounds.cpp  P2Data.cpp  P2Data.h  Ring_Element.cpp  Rq_Element.cpp
0-MP-SPDZ/FHEOffline/: DataSetup.cpp  DistDecrypt.cpp  PairwiseMachine.cpp  PairwiseMachine.h  PairwiseSetup.cpp  Proof.cpp  Proof.h  SimpleEncCommit.cpp  SimpleMachine.h
0-MP-SPDZ/GC/: CcdShare.h  MaliciousCcdShare.h  Processor.hpp  SemiSecret.h  SemiSecret.hpp  ShareThread.h  ShareThread.hpp  Thread.h  ThreadMaster.hpp  TinierShare.h  TinyPrep.hpp
0-MP-SPDZ/Machines/: mama-party.cpp  spdz2k-party.cpp
0-MP-SPDZ/Math/: Integer.h  Integer.hpp  Setup.cpp  Setup.h  Setup.hpp  Zp_Data.cpp  Zp_Data.h  bigint.cpp  bigint.h  bigint.hpp  fixint.h  gf2n.h  gfp.h  gfp.hpp  gfpvar.cpp  modp.hpp
0-MP-SPDZ/Networking/: AllButLastPlayer.h  CryptoPlayer.cpp  Exchanger.h  (+3 more)
2_EvalGuard/: Configs.py  crypto.py  experiments.py  experiments1.py  full_experiment_trajectory.csv  main.py  parse_results-cifar100.py  plot_results.py  requirements.txt  results.json  run_cifar100_both.sh  run_cifar100_paper.sh  run_cifar10_both.sh  run_cifar10_both_new.sh  run_cifar10_paper.sh  run_diagnostics.sh  summary_results_c100_all_ULTIMATE.csv  summary_results_c100_all_ULTIMATE1.csv  summary_results_c100_mean_rest_ULTIMATE.csv  summary_results_c100_mean_rest_ULTIMATE1.csv  summary_results_c10_all_ULTIMATE.csv  summary_results_c10_mean_rest_ULTIMATE.csv  watermark.py
crown/: Crown-simple-batch-model-input.py
shark/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  core_dump_fix.patch  requirements.txt  run-benchmark.sh  run-benchmarks-local.sh  run-benchmarks-remote.sh  run-crown-batch.sh  run-crown-benchmarks-local-new.sh  run-crown-benchmarks-local-new_v2.sh  run-microbenchmarks-local.sh  run-microbenchmarks-remote.sh
shark/benchmarks/: CMakeLists.txt  alexnet-localtrunc.cpp  alexnet.cpp  bert.cpp  deepsecure1.cpp  deepsecure2.cpp  deepsecure3.cpp  deepsecure4.cpp  hinet.cpp  mnist-A.cpp  simc1.cpp  simc2.cpp  vgg16.cpp
shark/benchmarks/crown/: crown_mnist_3layer_relu_20_best.cpp  crown_mnist_3layer_relu_20_best_with_refined_reciprocal.cpp  crown_test_mnist_5layer_relu_20_best_refined_reciprocal.cpp  crown_vnncomp_mnist_3layer_relu_256_best_with_refined_recip_batch_eps.cpp  crown_vnncomp_mnist_3layer_relu_256_best_with_refined_recip_sigle.cpp  crown_vnncomp_mnist_with_refined_recip_batch_eps.cpp  crowncustom_3layer_10-12-11-10.cpp  crowncustom_4layer_10-12-11-14-10.cpp  crowncustom_5layer_10-12-11-14-10-10.cpp  crowntest-debug-new.cpp  crowntest-minst5-my-debug.cpp  crowntest.cpp  crowntest_batch.cpp  crowntest_batch_true.cpp  crowntest_batch_vec.cpp  crowntest_optimized.cpp  crowntest_v2.cpp  crowntest_v3.cpp  crowntest_v4.cpp  crowntest_v5.cpp  crowntest_v6.cpp  reciprocal-test.cpp  reciprocal-test2.cpp  reciprocal-test3.cpp  reciprocal-test4.cpp  run-crown-batch.sh  run.text  single.cpp  test1.cpp
shark/ext/cryptoTools/: CMakeLists.txt
shark/ext/cryptoTools/cryptoTools/Common/: config.h
shark/ext/cryptoTools/cryptoTools/Crypto/: Blake2.h  Hashable.h
shark/include/shark/crypto/: dcfbit.hpp  dcfring.hpp  dpfring.hpp
shark/include/shark/protocols/: add.hpp  ars.hpp  common.hpp  conv.hpp  drelu.hpp  finalize.hpp  init.hpp  input.hpp  lrs.hpp  lut.hpp  matmul.hpp  matmul_ars.hpp  maxpool.hpp  mul.hpp  mul_ars.hpp  output.hpp  reciprocal.hpp  relu.hpp  relutruncate.hpp  select.hpp  sigmoid.hpp  spline.hpp  sumpool.hpp  tanh.hpp
shark/include/shark/types/: span.hpp  u128.hpp  u64.hpp  u8.hpp
shark/include/shark/utils/: comm.hpp  eigen.hpp  timer.hpp
shark/microbenchmarks/: linear.cpp  matmul.cpp  maxpool.cpp  reciprocal.cpp  relu.cpp  relutruncate.cpp  spline.cpp
shark/ml/datasets/cifar10/: dump.py
shark/ml/weights/hinet/: convert.py  inference.py  train.py  validate.py
shark/shark_crown_ml/: Convert-for-crown-mpc.py
shark/shark_crown_ml/crown_mpc_data/eran_cifar_10layer_relu_200_best/: README.md  config.txt
shark/shark_crown_ml/crown_mpc_data/eran_cifar_5layer_relu_100_best/: README.md  batch_config.txt  config.txt
shark/shark_crown_ml/crown_mpc_data/eran_cifar_7layer_relu_100_best/: README.md  config.txt
shark/shark_crown_ml/crown_mpc_data/vnncomp_mnist_3layer_relu_256_best/: README.md  config.txt
shark/shark_crown_ml/crown_mpc_data/vnncomp_mnist_5layer_relu_256_best/: README.md  config.txt
shark/shark_crown_ml/crown_mpc_data/vnncomp_mnist_7layer_relu_256_best/: README.md  config.txt
shark/src/crypto/: dcfbit.cpp  dcfring.cpp  dpfring.cpp
shark/src/protocols/: common.cpp  conv.cpp  drelu.cpp  finalize.cpp  init.cpp  input.cpp  lrs.cpp  lut.cpp  matmul.cpp  matmul_ars.cpp  maxpool.cpp  mul.cpp  mul_ars.cpp  output.cpp  reciprocal.cpp  relu.cpp  relutruncate.cpp  select.cpp  spline.cpp  sumpool.cpp
shark/src/utils/: comm.cpp  timer.cpp
shark/tests/: run-multi.sh
shark/tests/failing/: conv.cpp  reciprocal.cpp
shark/tests/multi/: drelu.cpp  init.cpp  lut.cpp  matmul-big.cpp  matmul.cpp  maxpool.cpp  relu.cpp  relutruncate.cpp  select.cpp  sigmoid.cpp  spline.cpp  tanh.cpp
shark/tests/single/: dcfbit.cpp  dcfring.cpp  dpfring.cpp  matmul-time.cpp  span.cpp
(+270 files in other folders)
